--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,8 +3,9 @@
   --container-background-color: rgb(255, 255, 255);
   --text-color: rgb(0, 0, 0);
   --text-hover-color: rgb(80, 80, 80);
-  --menu-background-color: rgba(27, 100, 158, 1);
+  --menu-item-color: rgba(27, 100, 158, 1);
   --modal-background-color: rgba(0, 0, 0, 0.8);
+  --menu-item-color-hover: rgb(15, 58, 94);
 }
 
 ::placeholder {
